2007-04-08  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\printindex): set \plainfrenchspacing.

2007-04-07  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\defunpenalty): new register.
	(\startdefun): use it to avoid page breaks between a defun and a
	single defunx -- only allow breaks between multiple defunx's.
	From Oleg.

2007-04-03  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\whatsitskip, \whatsitpenalty): new registers.
	(\safewhatsit): generalization of \dosubindsanitize.  Change call.
	(\pdfmkdest, \dosubind, \setref): call it.  This avoids a page
	break at an anchor (lispref/loading.texi/load-read-function).
	From Oleg.

2007-04-02  Karl Berry  <karl@gnu.org>

	* util/gendocs_template: "bytes" is more accurate than "characters".
	* util/gendocs.sh: force English settings; improve --help.
	From Bruno.

2007-03-31  Karl Berry  <karl@gnu.org>

	* makeinfo/makeinfo.c (init_paragraph): only free output_paragraph
	if it is non-null.

2007-03-31  Roland Levillain  <roland@lrde.epita.fr>

	* makeinfo/makeinfo.c (cm_image): Look for a JPEG image in the
	include search path before giving up.
	Fix inclusion of JPEG images (with non explicit extension)
	not present in the current directory, but in the include search path.

2007-03-28  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Menus): missing word "text".
	From Matt Kraai, 27 Mar 2007 10:26:28 -0700.

2007-03-18  Karl Berry  <karl@gnu.org>

	* makeinfo/makeinfo.c (cm_image): malloc enough space for the .txt
	when given an extension.

2007-03-17  Karl Berry  <karl@gnu.org>

	* util/dir-example: dmalloc, alignment.

2007-03-13  Oleg Katsitadze  <olegkat@gmail.com>

	* doc/texinfo.tex (\enddoublecolumns): add \penalty0 so the 
	recent contributions won't be spuriously added to an index page.

2007-02-26  Karl Berry  <karl@gnu.org>

	* info/info.c (info_short_example): example for dumping a whole
	manual, suggested by Dan Jacobson, 21 Feb 2007 08:37:08.

2007-02-24  Karl Berry  <karl@gnu.org>
